--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,17 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
 
 # Photopal
 
@@ -13,8 +25,7 @@ The goal of Photopal is to generate palettes from photos.
 
 ## Installation
 
-You can install the development version of Photopal from
-[GitHub](https://github.com/) with:
+You can install the development version of Photopal from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
@@ -25,7 +36,7 @@ devtools::install_github("Hiiiua/Photopal")
 
 This is a basic example which shows you how to solve a common problem:
 
-``` r
+```{r example}
 library(Photopal)
 ## basic example code
 ```
@@ -39,9 +50,6 @@ library(Photopal)
 -   palette_discrete()
 -   palette_continuous()
 -   palette_convert_cb(): convert to color-blind safe palette
--   use the original photo and overlay a 3D heatmap that shows which
-    areas of the image has the highest intensities of colors from the
-    generated palette
--   interaction: showing or saving the hex color code with
-    pointing/clicking (maybe Shiny/plotly)
+-   use the original photo and overlay a 3D heatmap that shows which areas of the image has the highest intensities of colors from the generated palette
+-   interaction: showing or saving the hex color code with pointing/clicking (maybe Shiny/plotly)
 -   palette optimizer function: given a palette, we make it better
