Update readme badge

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 
 [![R-CMD-check](https://github.com/Hiiiua/Photopal/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/Hiiiua/Photopal/actions/workflows/R-CMD-check.yaml)
-[![Codecov test coverage](https://codecov.io/gh/Hiiiua/Photopal/branch/main/graph/badge.svg)](https://app.codecov.io/gh/Hiiiua/Photopal?branch=main)
+[![codecov](https://codecov.io/github/Hiiiua/Photopal/branch/main/graph/badge.svg?token=D6IOVLOBOD)](https://codecov.io/github/Hiiiua/Photopal)
 <!-- badges: end -->
 
 The goal of Photopal is to generate palettes from photos.
